[package]
name = "mev-claim-reconciler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.28.0"
clap = { version = "4.1.11", features = ["derive", "env"] }
futures = "0.3.30"
jito-tip-distribution = { path = "./jito-programs/mev-programs/programs/tip-distribution"}
serde = { version = "1.0.198", features = ["derive"]}
serde_derive = "1.0.198"
serde_json = "1.0.116"
solana-program = "1.16"
solana-rpc-client = "1.16"
tokio = { version = "1", features = ["full"] }

